# fastorders-api

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  main.py  openapi.json  pyproject.toml
app/api/api_v1/: api.py
app/api/api_v1/router/: health.py  order.py  order_item.py  product.py  user.py
app/config/: auth_settings.py  config.py  init_settings.py  nosql_db_settings.py  settings.py  sql_db_settings.py
app/core/: lifecycle.py  memcached_connection_manager.py  memcached_dependency.py
app/core/enums/: __init__.py  gender.py  toke_type.py
app/core/interfaces/: __init__.py  repository_interface.py
app/core/security/: jwt.py  password.py
app/db/: init_db.py  init_nosql_db.py  session.py
app/exceptions/: __init__.py  exceptions.py
app/middlewares/: security_headers_middleware.py
app/models/: base_class.py
app/models/structured/: __init__.py  order.py  order_item.py  product.py  user.py
app/models/unstructured/: __init__.py  ml_model_result.py  product_review.py
app/repositories/: __init__.py  base_sql_repository.py
app/repositories/structured/: __init__.py  order_item_repository.py  order_repository.py  product_repository.py  user_repository.py
app/schemas/: order.py  order_item.py  product.py  user.py
app/tasks/: __init__.py
app/tasks/email_tasks/: email_tasks.py  message.py  notification.py  template.py
app/utils/: image_utils.py  openapi_utils.py  utils.py
static/css/: styles.css
static/templates/: new_account.html
